--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "sweetalert2-react": "^0.8.3",
+    "sweetalert2": "^11.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
