--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL=https://lms-xfl6.vercel.app
+REACT_APP_BASE_URL=lms-backend-production-d3c9.up.railway.app
 # REACT_APP_BASE_URL=http://localhost:5001
