--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_BASE_URL=https://lms-backend-production-d3c9.up.railway.app
+# REACT_APP_BASE_URL=https://lms-backend-production-d3c9.up.railway.app
 # REACT_APP_BASE_URL=http://localhost:5001
+REACT_APP_BASE_URL=https://lms-api-pr4i.onrender.com
